<resources>
    <string name="app_name">Movies</string>
    <string name="movieRating">Rating</string>
    <string name="movieTitle">Movie Title</string>
    <string name="movieDetail">Overview</string>
    <string name="movieReleaseDate">Realease Date</string>
    <string name="movieTrailer">Trailer</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
